--- a/bolin-crm-main/bolin-crm-web/src/main/webapp/index.html
+++ b/bolin-crm-main/bolin-crm-web/src/main/webapp/index.html
@@ -87,6 +87,9 @@
 	<div class="nav2 hide">
 		<div>
 			<a href="javascript:;">
+        <div class="nav-list">
+        	<a href="https://www.bolinjy.cn/"  target="_self"  class="link" style="margin-right: 10px;">首页</a>
+        </div>
 				<div class="nav-list">
 					<a href="javascript:;">自学考试</a>
 					<div class="box">
@@ -320,6 +323,9 @@
 			<div class="nav">
 				<div>
 					<a href="javascript:;">
+            <div class="nav-list">
+            	<a href="https://www.bolinjy.cn/" target="_self" class="link" style="margin-right: 10px;">首页</a>
+            </div>
 						<div class="nav-list">
 							<a href="javascript:;">自学考试</a>
 							<div class="box">
